# bevygame

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
share/: Cargo.toml
share/src/: lib.rs
src/: hello_bevy.rs  main.rs
