[package]
name = "server"
version = "0.1.0"
authors = ["rjman", "hacpy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share = { path = "../share" }

log = "0.4"
bevy = { version = "0.5.0" }
bevy_networking_turbulence = { version = "0.3.1", default-features = false, features = ["use-webrtc"] }
serde = { version = "1.0.125", features = ["derive"] }